rbdl/tests/not_str.stderr
error: expected string literal
  --> $DIR/not_str.rs:19:12
   |
19 | rbdl_file!(2 + 2);
   |            ^
